--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sporty-news</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Sporty-News</h1>
+    <nav>
+        <ul>
+            <li>home</li>
+            <li>about us</li>
+            <li>contact us</li>
+            <li>blogs</li>
+            <li>join us</li>
+        </ul>
+    </nav>
+
 </body>
 </html>
